--- a/css/styles.css
+++ b/css/styles.css
@@ -196,7 +196,7 @@ border: 0;
 .large-button {
   position: relative;
   z-index: 1;
-  display: grid;
+  display: inline-grid;
   place-items: center;
   padding: 0 2em;
   border-radius: 50%;
@@ -270,7 +270,7 @@ border: 0;
 }
 
 .dot-indicators > *:hover,
-.dot-indicators > *:focus {
+.dot-indicators > *:focus { 
   background-color: hsl( var(--clr-white) / .5);
 }
 
